fixed tailwind installation

--- a/client/src/stylesheets/styles.css
+++ b/client/src/stylesheets/styles.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     background-color: #1E1E1E;
     font-family: Helvetica, sans-serif;
     color: #ffffff;
@@ -224,4 +224,4 @@ body {
 .search-cards-container {
     width: 1000px;
     margin-bottom: 50px;
-}
+} */
